# FocusPad

./: README.md  app_settings.json  study_data.json
src/: data.rs  file_drop_handler.rs  keyboard_handler.rs  settings.rs  split_view_ui.rs  tab_manager.rs  terminal.rs  timer.rs
src/ui/: calculator_tab.rs  doc.md  flashcard.rs  flashcard_ui.rs  graph_tab.rs  markdown_editor.rs  markdown_renderer.rs  mod.rs  record_tab.rs  settings_tab_ui.rs  stats_tab.rs  terminal_tab_ui.rs
study_timer/: Cargo.toml  app_settings.json  study_data.json
study_timer/files/: a.md
study_timer/files/folder1/: test1.md
study_timer/src/: app.rs  data.rs  debug.rs  file_drop_handler.rs  image_handler.rs  keyboard_handler.rs  main.rs  settings.rs  split_view_ui.rs  tab_manager.rs  tab_selector_ui.rs  weather.rs  weather_persistence.rs
study_timer/src/ui/: doc.md  file_browser.rs  flashcard.rs  flashcard_tab_ui.rs  flashcard_ui.rs  graph_tab.rs  markdown_editor.rs  markdown_renderer.rs  markdown_tab_ui.rs  mod.rs  record_tab.rs  reminder_tab.rs  settings_tab_ui.rs  stats_tab.rs  timer_tab.rs  todo.md  todo_tab.rs
