[package]
name = "study_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.0"        # egui frame for cross-platform app development
egui = "0.24.0"          # Immediate mode GUI library
chrono = "0.4.31"        # Date and time library
serde = { version = "1.0", features = ["derive"] } # Serialization framework
serde_json = "1.0"       # JSON serialization/deserialization

